--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=video-game-manager
+spring.application.name=game-backlog-backend
 rawg.api.key=${RAWG_API_KEY}
 
 spring.datasource.url=jdbc:h2:mem:testdb
